docs/api/qiskit/0.39/qiskit.algorithms.Eigensolver.mdx
---
title: Eigensolver (v0.39)
description: API reference for qiskit.algorithms.Eigensolver in qiskit v0.39
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.Eigensolver
---

# Eigensolver

<Class id="qiskit.algorithms.Eigensolver" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/algorithms/eigen_solvers/eigen_solver.py" signature="Eigensolver" modifiers="class">
  Bases: `abc.ABC`

  Pending deprecation: Eigensolver Interface.

  The Eigensolver interface has been superseded by the [`qiskit.algorithms.eigensolvers.Eigensolver`](qiskit.algorithms.eigensolvers.Eigensolver "qiskit.algorithms.eigensolvers.Eigensolver") interface. This interface will be deprecated in a future release and subsequently removed after that.

  Algorithms that can compute eigenvalues for an operator may implement this interface to allow different algorithms to be used interchangeably.

  ## Methods

  <span id="qiskit-algorithms-eigensolver-compute-eigenvalues" />

  ### compute\_eigenvalues

  <Function id="qiskit.algorithms.Eigensolver.compute_eigenvalues" signature="Eigensolver.compute_eigenvalues(operator, aux_operators=None)" modifiers="abstract">
    Computes eigenvalues. Operator and aux\_operators can be supplied here and if not None will override any already set into algorithm so it can be reused with different operators. While an operator is required by algorithms, aux\_operators are optional. To ‘remove’ a previous aux\_operators array use an empty list here.

    **Parameters**

    *   **operator** ([`OperatorBase`](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – Qubit operator of the Observable
    *   **aux\_operators** (`Union`\[`List`\[`Optional`\[[`OperatorBase`](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")]], `Dict`\[`str`, [`OperatorBase`](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")], `None`]) – Optional list of auxiliary operators to be evaluated with the eigenstate of the minimum eigenvalue main result and their expectation values returned. For instance in chemistry these can be dipole operators, total particle count operators so we can get values for these at the ground state.

    **Return type**

    [`EigensolverResult`](qiskit.algorithms.EigensolverResult "qiskit.algorithms.eigen_solvers.eigen_solver.EigensolverResult")

    **Returns**

    EigensolverResult
  </Function>

  <span id="qiskit-algorithms-eigensolver-supports-aux-operators" />

  ### supports\_aux\_operators

  <Function id="qiskit.algorithms.Eigensolver.supports_aux_operators" signature="Eigensolver.supports_aux_operators()" modifiers="classmethod">
    Whether computing the expectation value of auxiliary operators is supported.

    **Return type**

    `bool`

    **Returns**

    True if aux\_operator expectations can be evaluated, False otherwise
  </Function>
</Class>

